--- a/css/styles.css
+++ b/css/styles.css
@@ -33,3 +33,20 @@ footer {
   background-color: #eee;
   color: #555;
 }
+.about-section {
+  background-color: #0b0d1a; /* dark background */
+  color: white;
+  padding: 60px 30px;
+  text-align: left;
+}
+.about-section h2 {
+  font-size: 2.8em;
+  margin-bottom: 30px;
+}
+.about-section p {
+  max-width: 850px;
+  font-size: 1.1em;
+  line-height: 1.7;
+  margin-bottom: 20px;
+}
+
